# polkadotHackathon

./: JS-back-end-challenge.txt  JS-front-end-challenge.txt  README.md  deploy-auction-to-plasm  deploy-to-moonbeam  deploy-to-moonbeam-with-truffle  deploy-to-moonboom-with-truffle  deploy-to-plasm  extrinsic-on-westend  run-polkadot-node
auction-dapp/: 178.128.45.229  readme.md
auction-dapp/ink-auction-contract/: Cargo.toml  auction.wasm  lib.rs  metadata.json
auction-dapp/substrate-front-end-template/: package.json
auction-dapp/substrate-front-end-template/src/: AccountSelector.js  App.js  Auction.js  AuctionContract.js  AuctionMetadata.json  NodeInfo.js
frame-development/substrate-front-end-template/src/: App.js  ReferralDetails.js  TemplateModule.js
frame-multisig/substrate-front-end-template/src/: Multisig.js
ink-contract-and-transfer-ui/cust/: Cargo.toml  cust.wasm  lib.rs  metadata.json
ink-contract-and-transfer-ui/substrate-front-end-template/src/: App.js  CustBalances.js  CustContract.js  CustMetadata.json  (+2 more)
ink-raffle-contract/: Cargo.toml  lib.rs  metadata.json  raffle.sol  raffle.wasm  readme.md
orml-nft-substrate-build/: types.json
orml-nft-substrate-build/pallets/acala-nft/: Cargo.toml
orml-nft-substrate-build/pallets/acala-nft/src/: lib.rs
orml-nft-substrate-build/runtime/: Cargo.toml
orml-substrate-build/scripts/: init.sh
plasm-auction-contract/: SimpleAuction.json  SimpleAuction.sol  SimpleAuction.wasm  deploy-auction-as-wasm
substrate-fee-estimate/: readme.md
substrate-fee-estimate/substrate-front-end-template/: package.json
(+23 files in other folders)
